--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- Quando quiser usar a planilha, substitua o link abaixo -->
     <iframe
-      src="SHEET_EMBED_URL"
+      src="https://docs.google.com/spreadsheets/d/1KxpU-SLZtGldTyJPingqXo8BhESDAzzNAm8hQXzqAQE/edit?usp=sharing"
       width="640"
       height="600"
       frameborder="0"
