--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Leilão de Obras</title>
+  <title>O código da Obra</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -11,7 +11,7 @@
 
   <header>
     <h1>Leilão da Obra X</h1>
-    <p>Encerramento em <span id="endText"></span> (BRT)</p>
+    <p>Este leilão encerra em <span id="endText"></span> (BRT)</p>
     <div id="timer"></div>
   </header>
 
@@ -22,12 +22,13 @@
       target="_blank"
       rel="noopener"
     >
-      Converse aqui para comprar
+      Falar comigo para comprar
+
     </a>
   </section>
 
   <section>
-    <h2>Dar lance</h2>
+    <h2>Enviar um lance</h2>
 
     <iframe
       src="https://docs.google.com/forms/d/e/1FAIpQLSdc_scL91ev-gZQqq43TS44tnZT6vbp95iv_0m_3Kyduya1KA/viewform?embedded=true"
@@ -39,11 +40,30 @@
     >
       Carregando…
     </iframe>
+<section>
+  <h2>Regras do leilão</h2>
+
+  <p>
+    Os lances registrados neste espaço são públicos e feitos de forma consciente e responsável.
+  </p>
+
+  <p>
+    Caso um lance seja o vencedor, o colecionador compromete-se a realizar o pagamento via PIX dentro do prazo combinado, após contato direto.
+  </p>
+
+  <p>
+    Essas regras existem para garantir um ambiente sério, transparente e respeitoso, preservando a relação entre artista e colecionador.
+  </p>
+
+  <p>
+    Encerrado o prazo do leilão, não serão aceitos novos lances.
+  </p>
+</section>
 
   </section>
 
   <section>
-    <h2>Lances públicos</h2>
+    <h2>Lances registrados</h2>
 
     <!-- Quando quiser usar a planilha, substitua o link abaixo -->
     <iframe
