--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>O código da Obra</title>
+  <title>O Código da Obra</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,7 +23,6 @@
       rel="noopener"
     >
       Falar comigo para comprar
-
     </a>
   </section>
 
@@ -40,39 +39,31 @@
     >
       Carregando…
     </iframe>
-<section>
-  <h2>Regras do leilão</h2>
+  </section>
 
-  <p>
-    Os lances registrados neste espaço são públicos e feitos de forma consciente e responsável.
-  </p>
+  <section>
+    <h2>Regras do leilão</h2>
 
-  <p>
-    Caso um lance seja o vencedor, o colecionador compromete-se a realizar o pagamento via PIX dentro do prazo combinado, após contato direto.
-  </p>
-
-  <p>
-    Essas regras existem para garantir um ambiente sério, transparente e respeitoso, preservando a relação entre artista e colecionador.
-  </p>
-
-  <p>
-    Encerrado o prazo do leilão, não serão aceitos novos lances.
-  </p>
-</section>
-
+    <p>Os lances registrados neste espaço são públicos e feitos de forma consciente e responsável.</p>
+    <p>Caso um lance seja o vencedor, o colecionador compromete-se a realizar o pagamento via PIX dentro do prazo combinado, após contato direto.</p>
+    <p>Essas regras existem para garantir um ambiente sério, transparente e respeitoso, preservando a relação entre artista e colecionador.</p>
+    <p>Encerrado o prazo do leilão, não serão aceitos novos lances.</p>
   </section>
 
   <section>
     <h2>Lances registrados</h2>
 
-    <!-- Quando quiser usar a planilha, substitua o link abaixo -->
+    <!-- IMPORTANTE:
+         O link abaixo é de "edição/compartilhamento" e pode NÃO funcionar bem em iframe.
+         O correto é usar o link de "Publicar na Web" do Google Sheets (gera /pubhtml).
+         Quando você tiver esse link, cole ele no src abaixo.
+    -->
     <iframe
-      src="https://docs.google.com/spreadsheets/d/1KxpU-SLZtGldTyJPingqXo8BhESDAzzNAm8hQXzqAQE/edit?usp=sharing"
+      src="SHEET_EMBED_URL"
       width="640"
       height="600"
       frameborder="0"
-    >
-    </iframe>
+    ></iframe>
 
   </section>
 
