--- a/index.html
+++ b/index.html
@@ -53,18 +53,16 @@
   <section>
     <h2>Lances registrados</h2>
 
-    <!-- IMPORTANTE:
-         O link abaixo é de "edição/compartilhamento" e pode NÃO funcionar bem em iframe.
-         O correto é usar o link de "Publicar na Web" do Google Sheets (gera /pubhtml).
-         Quando você tiver esse link, cole ele no src abaixo.
-    -->
     <iframe
-      src="SHEET_EMBED_URL"
+      src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRhdVamZ8cKF_qvHD1AVskLTZuFIrbRzWPO3fnxzOHatntLh4tvJp3T5qWT_GwUw9BGaKjyiEpcPNd5/pubhtml?gid=2022177121&single=true&widget=true&headers=false"
       width="640"
-      height="600"
+      height="520"
       frameborder="0"
     ></iframe>
 
+    <p class="muted">
+      Esta lista exibe apenas a aba pública de lances (sem dados sensíveis).
+    </p>
   </section>
 
   <script>
