--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<!doctype html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>O Código da Obra</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <header class="topbar">
+    <div class="wrap">
+      <div class="brand">
+        <div class="logo">CO</div>
+        <div class="brand-text">
+          <div class="brand-title">O Código da Obra</div>
+          <div class="brand-subtitle">Site simples • estático • transparente</div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="wrap">
+    <section class="hero">
+      <h1>Página principal</h1>
+      <p class="sub">
+        Escolha para onde ir. A ideia aqui é manter tudo direto, sem complicação.
+      </p>
+
+      <div class="grid2">
+        <a class="bigbtn" href="galeria.html">
+          <div class="bigbtn-title">Galeria</div>
+          <div class="bigbtn-sub">Publicação de obras • compra direta • WhatsApp</div>
+        </a>
+
+        <a class="bigbtn bigbtn-primary" href="leiloes.html">
+          <div class="bigbtn-title">Leilões</div>
+          <div class="bigbtn-sub">Timer (BRT) • lances via Google Forms • planilha pública</div>
+        </a>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div>O Código da Obra • GitHub Pages</div>
+    </footer>
+  </main>
+
+</body>
+</html>
 
