--- a/galeria.html
+++ b/galeria.html
@@ -3,12 +3,42 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Galeria</title>
+<title>O Código da Obra — Galeria</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Galeria de Obras</h1>
-<p>Obras disponíveis para compra direta.</p>
-<a href="https://wa.me/5561981471987" target="_blank">Converse para comprar</a>
+
+<header class="topbar">
+  <div class="wrap">
+    <div class="brand">
+      <div class="logo">CO</div>
+      <div class="brand-text">
+        <div class="brand-title">O Código da Obra</div>
+        <div class="brand-subtitle">Galeria • compra direta</div>
+      </div>
+    </div>
+
+    <div class="toplinks">
+      <a class="link" href="index.html">← Página principal</a>
+      <a class="link" href="leiloes.html">Leilões</a>
+    </div>
+  </div>
+</header>
+
+<main class="wrap">
+  <section class="card">
+    <h1>Galeria de Obras</h1>
+    <p class="sub">Obras disponíveis para compra direta. Atendimento por WhatsApp.</p>
+
+    <a class="btn bigbtn-primary" href="https://wa.me/5561981471987" target="_blank" rel="noopener">
+      Converse para comprar
+    </a>
+  </section>
+
+  <footer class="footer">
+    <div>Em breve: cards de obras (imagem, título, técnica, tamanho, valor, status).</div>
+  </footer>
+</main>
+
 </body>
 </html>
