--- a/leiloes.html
+++ b/leiloes.html
@@ -28,11 +28,11 @@
 
 <main class="wrap">
 
-  <!-- CARD PRINCIPAL -->
+  <!-- LEILÃO -->
   <section class="card card-hero">
     <h1 class="title">Leilão da Obra X</h1>
     <p class="subtitle">
-      Obra autoral • peça única • pagamento via PIX combinado após encerramento
+      Obra autoral • peça única • pagamento via PIX combinado após o encerramento
     </p>
 
     <div class="timer-box">
@@ -43,7 +43,7 @@
     </div>
   </section>
 
-  <!-- DAR LANCE -->
+  <!-- FORMULÁRIO -->
   <section class="card">
     <h2>Dar lance</h2>
     <p class="sub">
@@ -52,13 +52,13 @@
     </p>
 
     <iframe
-      src="FORM_EMBED_URL"
+      src="https://docs.google.com/forms/d/e/1FAIpQLSdc_scL91ev-gZQqq43TS44tnZT6vbp95iv_0m_3Kyduya1KA/viewform?embedded=true"
       loading="lazy"
       title="Formulário de lances">
     </iframe>
   </section>
 
-  <!-- LANCES PÚBLICOS -->
+  <!-- PLANILHA -->
   <section class="card">
     <h2>Lances públicos</h2>
     <p class="sub">
@@ -66,7 +66,7 @@
     </p>
 
     <iframe
-      src="SHEET_EMBED_URL"
+      src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRhdVamZ8cKF_qvHD1AVskLTZuFIrbRzWPO3fnxzOHatntLh4tvJp3T5qWT_GwUw9BGaKjyiEpcPNd5/pubhtml?widget=true&headers=false"
       loading="lazy"
       title="Lances públicos">
     </iframe>
@@ -92,7 +92,7 @@
   </section>
 
   <footer class="footer">
-    <div>O Código da Obra • Site estático • Controle manual</div>
+    O Código da Obra • Site estático • Controle manual
   </footer>
 
 </main>
