--- a/index.html
+++ b/index.html
@@ -29,38 +29,50 @@
 
   <!-- AVISO / PRÓXIMO LEILÃO -->
   <section class="card notice">
-    <div class="notice-tag">Aviso do leilão</div>
-    <h1 class="title" style="margin-top:8px;">Próximo leilão</h1>
+    <div class="notice-top">
+      <!-- TROQUE A CLASSE DO STATUS: status-soon | status-open | status-closed -->
+      <span class="status status-soon">EM BREVE</span>
+
+      <!-- opcional: id/numeração do leilão -->
+      <span class="notice-tag">Aviso do leilão</span>
+    </div>
+
+    <h1 class="title" style="margin-top:10px;">1º Leilão da Obra X</h1>
 
     <p class="subtitle" style="margin-bottom:10px;">
-      <!-- EDITÁVEL: troque esse texto sempre que for anunciar um novo leilão -->
-      1º Leilão da Obra X! Dia <strong>__/__/____</strong>, às <strong>__h__</strong> (horário de Brasília).
-      O leilão terá duração de <strong>24 horas</strong>. Lances após o término do horário não serão computados.
+      Dia <strong>__/__/____</strong>, às <strong>__h__</strong> (horário de Brasília).<br>
+      Duração: <strong>24 horas</strong>. Lances após o término do horário não serão computados.
     </p>
 
     <div class="notice-actions">
       <a class="btn-primary" href="leiloes.html">Ir para o leilão</a>
       <a class="btn-ghost" href="galeria.html">Ver galeria</a>
+
+      <!-- OPCIONAL: WhatsApp (coloque seu número no formato 55DDDNUMERO) -->
+      <!-- Ex: https://wa.me/5561999999999 -->
+      <a class="btn-ghost" href="https://wa.me/SEU_NUMERO_AQUI" target="_blank" rel="noopener">
+        Falar no WhatsApp
+      </a>
     </div>
 
     <div class="note" style="margin-top:12px;">
-      Dica: você pode editar este aviso sempre que for abrir um novo leilão.
+      Você pode editar este aviso sempre que for abrir um novo leilão. (É manual e rápido.)
     </div>
   </section>
 
-  <!-- BOTÕES PRINCIPAIS -->
+  <!-- ACESSOS -->
   <section class="card">
-    <h2 style="margin:0 0 10px;">Acesse</h2>
+    <h2 style="margin:0 0 10px;">Acessos</h2>
 
-    <div class="grid-live" style="grid-template-columns:1fr 1fr;">
-      <a class="card" style="text-decoration:none; color:inherit;" href="galeria.html">
-        <h3 style="margin:0 0 6px;">Galeria</h3>
-        <div class="section-sub">Obras disponíveis para compra direta</div>
+    <div class="home-grid">
+      <a class="home-tile" href="galeria.html">
+        <div class="tile-title">Galeria</div>
+        <div class="tile-sub">Obras disponíveis para compra direta</div>
       </a>
 
-      <a class="card" style="text-decoration:none; color:inherit;" href="leiloes.html">
-        <h3 style="margin:0 0 6px;">Leilões</h3>
-        <div class="section-sub">Timer • lances via formulário • planilha pública</div>
+      <a class="home-tile tile-primary" href="leiloes.html">
+        <div class="tile-title">Leilões</div>
+        <div class="tile-sub">Timer • lances via formulário • planilha pública</div>
       </a>
     </div>
   </section>
