--- a/index.html
+++ b/index.html
@@ -11,40 +11,35 @@
 <header class="site-header">
   <div class="wrap header-row">
     <div class="brand">
-      <div class="brand-icon" aria-hidden="true">⚖️</div>
-      <div class="brand-text">
-        <div class="brand-title">O Código da Obra</div>
-        <div class="brand-subtitle">Site simples • estático • transparente</div>
-      </div>
+      <div class="brand-title">O Código da Obra</div>
+      <div class="brand-subtitle">Site simples • estático • transparente</div>
     </div>
 
-    <div class="header-actions">
+    <nav class="nav">
       <a class="btn btn-primary" href="contato.html">Fale Conosco</a>
-    </div>
+    </nav>
   </div>
 </header>
 
 <main class="wrap page">
+  <section class="card notice">
+    <div class="notice-title">QUADRO DE AVISOS!</div>
+    <div class="notice-body">
+      <p><strong>1º Leilão da Obra X</strong></p>
+      <p>Dia __/__/____, às __h__ (horário de Brasília).</p>
+      <p>Duração: 24 horas.</p>
+      <p>Lances após o término do horário não serão computados.</p>
+    </div>
+  </section>
 
-  <section class="hub-buttons">
+  <section class="hub">
     <a class="btn btn-frame big" href="galeria.html">Galeria de Arte</a>
     <a class="btn btn-frame big" href="leiloes.html">Leilões</a>
   </section>
 
-  <section class="notice card">
-    <div class="notice-title">QUADRO DE AVISOS!</div>
-    <div class="notice-body">
-      <div class="notice-line"><strong>1º Leilão da Obra X</strong></div>
-      <div class="notice-line">Dia __/__/____, às __h__ (horário de Brasília).</div>
-      <div class="notice-line">Duração: 24 horas.</div>
-      <div class="notice-line">Lances após o término do horário não serão computados.</div>
-    </div>
-  </section>
-
   <footer class="footer">
-    <div>© O Código da Obra • GitHub Pages • Sem backend • Controle manual</div>
+    <div>© O Código da Obra • GitHub Pages • Sem backend</div>
   </footer>
-
 </main>
 
 </body>
