--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>O Código da Obra — Contato</title>
+  <title>O Código da Obra — Fale Conosco</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,56 +11,39 @@
 <header class="site-header">
   <div class="wrap header-row">
     <div class="brand">
-      <div class="brand-icon" aria-hidden="true">✉️</div>
-      <div class="brand-text">
-        <div class="brand-title">O Código da Obra</div>
-        <div class="brand-subtitle">FALE CONOSCO</div>
-      </div>
+      <div class="brand-title">O Código da Obra</div>
+      <div class="brand-subtitle">FALE CONOSCO</div>
     </div>
 
-    <div class="header-actions">
-      <a class="btn btn-ghost" href="index.html">Página inicial</a>
-      <a class="btn btn-ghost" href="leiloes.html">Leilões</a>
+    <nav class="nav">
+      <a class="btn btn-ghost" href="index.html">Página Inicial</a>
       <a class="btn btn-ghost" href="galeria.html">Galeria</a>
-    </div>
+      <a class="btn btn-ghost" href="leiloes.html">Leilão</a>
+    </nav>
   </div>
 </header>
 
 <main class="wrap page">
-
   <section class="grid-2">
     <section class="card pad">
       <div class="section-title">Contato</div>
-      <div class="desc">Edite os dados abaixo com seus canais oficiais.</div>
+      <div class="desc">Você pode editar estes dados depois:</div>
 
-      <div class="contact-list">
-        <div class="contact-item"><strong>WhatsApp/Telefone:</strong> <span>(edite aqui)</span></div>
-        <div class="contact-item"><strong>Instagram:</strong> <span>(edite aqui)</span></div>
-        <div class="contact-item"><strong>E-mail:</strong> <span>(edite aqui)</span></div>
-      </div>
-
-      <div class="hint">
-        Sugestão: mantenha estes como únicos canais oficiais para evitar golpes.
+      <div class="contact-box">
+        <div><strong>Telefone/WhatsApp:</strong> (editar)</div>
+        <div><strong>Instagram:</strong> (editar)</div>
+        <div><strong>E-mail:</strong> (editar)</div>
       </div>
     </section>
 
     <section class="card pad">
       <div class="section-title">Sobre a Autora</div>
-
       <div class="about">
         <div class="about-photo">
           <img src="assets/img/autora.jpg" alt="Foto da autora">
         </div>
-
         <div class="about-text">
-          <div class="desc">
-            (Escreva aqui uma mini descrição sua. Ex.: artista, técnica preferida,
-            visão do trabalho, cidade, e o que você busca com as obras.)
-          </div>
-
-          <div class="hint">
-            Dica: deixe curto, humano e direto. Isso passa confiança.
-          </div>
+          <p class="desc">(Escreva aqui uma mini descrição sua no campo da arte.)</p>
         </div>
       </div>
     </section>
@@ -69,7 +52,6 @@
   <footer class="footer">
     <div>Contato • O Código da Obra</div>
   </footer>
-
 </main>
 
 </body>
