--- a/leiloes.html
+++ b/leiloes.html
@@ -57,8 +57,10 @@
         <span>Formulário oficial</span>
       </button>
       <div class="hint center-hint">
-        Ao Clicar, uma janela com um formulário abrirá para vc preencher e dar seu lance
-      </div>
+  Ao clicar, abrirá o formulário oficial do leilão.<br>
+  Para preenchê-lo, talvez seja necessário estar logado em uma conta Gmail.<br>
+  Basta preencher os campos e enviar seu lance.
+</div>
     </section>
 
     <!-- Coluna direita -->
