--- a/leiloes.html
+++ b/leiloes.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>O Código da Obra — Leilão</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=6" />
 </head>
 <body>
 
@@ -24,23 +24,24 @@
 
 <main class="wrap page">
 
-  <!-- Encerramento (único bloco no topo) -->
+  <!-- Encerramento -->
   <section class="status-row one">
     <div class="status-box">
       <div class="mini">Encerramento dos Lances (Horário de Brasília)</div>
-      <!-- Data fictícia: você edita manualmente quando for criar o leilão -->
       <div class="big">23/12/2025 • 20:00</div>
     </div>
   </section>
 
   <section class="auction-layout">
+
     <!-- Coluna esquerda -->
     <aside class="left">
       <div class="card pad">
         <div class="section-title">Informações do que será leiloado</div>
         <a class="link" href="#" id="openInfo">INFORMAÇÕES DO LEILÃO</a>
         <div class="hint">
-          Quando clicar no link, aparecerá um pop-up com: Leilão da Obra X, Descrição da Obra X e Foto.
+          Quando clicar no link, aparecerá um pop-up com:
+          Leilão da Obra X, Descrição da Obra X e Foto.
         </div>
       </div>
 
@@ -50,17 +51,18 @@
       </div>
     </aside>
 
-    <!-- Coluna central (CTA) -->
+    <!-- Coluna central -->
     <section class="center">
       <button class="btn btn-cta cta" id="openForm" type="button">
         Dê seu Lance!
         <span>Formulário oficial</span>
       </button>
+
       <div class="hint center-hint">
-  Ao clicar, abrirá o formulário oficial do leilão.<br>
-  Para preenchê-lo, talvez seja necessário estar logado em uma conta Gmail.<br>
-  Basta preencher os campos e enviar seu lance.
-</div>
+        Ao clicar, abrirá o formulário oficial do leilão.<br>
+        Para preenchê-lo, talvez seja necessário estar logado em uma conta Gmail.<br>
+        Basta preencher os campos e enviar seu lance.
+      </div>
     </section>
 
     <!-- Coluna direita -->
@@ -71,7 +73,8 @@
         <div class="embed">
           <iframe
             src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRhdVamZ8cKF_qvHD1AVskLTZuFIrbRzWPO3fnxzOHatntLh4tvJp3T5qWT_GwUw9BGaKjyiEpcPNd5/pubhtml?gid=2022177121&single=true&widget=true&headers=false"
-            title="Planilha pública de lances"></iframe>
+            title="Planilha pública de lances">
+          </iframe>
         </div>
 
         <div class="rules">
@@ -85,6 +88,7 @@
         </div>
       </div>
     </section>
+
   </section>
 
   <footer class="footer">
@@ -118,7 +122,8 @@
     <div class="modal-body modal-body-embed">
       <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLSdc_scL91ev-gZQqq43TS44tnZT6vbp95iv_0m_3Kyduya1KA/viewform?embedded=true"
-        title="Formulário oficial de lances"></iframe>
+        title="Formulário oficial de lances">
+      </iframe>
     </div>
   </div>
 </div>
