--- a/index.html
+++ b/index.html
@@ -23,12 +23,23 @@
 
 <main class="wrap page">
   <section class="card notice">
-    <div class="notice-title">QUADRO DE AVISOS!</div>
+    <div class="notice-title">QUADRO DE AVISOS</div>
     <div class="notice-body">
-      <p><strong>1º Leilão da Obra X</strong></p>
-      <p>Dia __/__/____, às __h__ (horário de Brasília).</p>
-      <p>Duração: 24 horas.</p>
-      <p>Lances após o término do horário não serão computados.</p>
+      <p>
+        Está aberto o <strong>1º Leilão da Obra X</strong>.
+      </p>
+      <p>
+        O leilão terá início no dia __/__/____, às __h__,
+        seguindo o horário de Brasília.
+      </p>
+      <p>
+        Os lances ficam disponíveis por <strong>24 horas</strong>.
+        Lances enviados após o horário de encerramento não serão considerados.
+      </p>
+      <p>
+        Este site foi criado para preservar um ambiente simples,
+        transparente e respeitoso entre artista e colecionador.
+      </p>
     </div>
   </section>
 
@@ -38,7 +49,7 @@
   </section>
 
   <footer class="footer">
-    <div>© O Código da Obra • GitHub Pages • Sem backend</div>
+    <div>© O Código da Obra • GitHub Pages • Site estático</div>
   </footer>
 </main>
 
